--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>IIT GANDHINAGAR,PALAJ,<br />GUARAT,INDIA-382355
+								<p>IIT GANDHINAGAR,PALAJ,<br />GUJARAT,INDIA-382355
 								</p>
 							</section>
 							<section>
