--- a/generic.html
+++ b/generic.html
@@ -123,9 +123,11 @@
 									</ul>
 								<p><b>Key Skills and Knowledge Acquired:
 
-</b><br>Basic concepts of Data Analytics</br>
+                                                                        </b><br>Basic concepts of Data Analytics</br>
 									<br>Familiarity with AI/ML-related job functions</br>
-
+                                                                        <br>Understanding of Data Engineering principles</br>
+									<br>Proficiency in Data Science fundamentals</br>
+                                                                         <br>Understanding of Data Engineering principles</br>
 									
 							</section>
 
