--- a/generic.html
+++ b/generic.html
@@ -120,6 +120,8 @@
 									<br>Business Strategy</br></p>
 									<ul>
 										<li><b>Introduction to Data Science :Cisco Networking Academy</br></b></li>
+										<a href="https://www.credly.com/badges/83bc9fd7-e06d-4188-ac16-a45e41d655ee/public_url">Badge</a> 
+						.</p>
 									</ul>
 								<p><b>Key Skills and Knowledge Acquired:
 
@@ -127,7 +129,7 @@
 									<br>Familiarity with AI/ML-related job functions</br>
                                                                         <br>Understanding of Data Engineering principles</br>
 									<br>Proficiency in Data Science fundamentals</br>
-                                                                         <br>Understanding of Data Engineering principles</br>
+                                                                         
 									
 							</section>
 
