--- a/generic.html
+++ b/generic.html
@@ -105,6 +105,23 @@
 									</ul>
 							
 									<h2><b>Certifications</b></h2>
+								        <ul>
+										<li><b>British Airways Data Science Job Simulation on Forage  (January 2024)</br></b></li>
+									</ul>
+									<p>
+									British Airways Data Science Job Simulation on Forage - January 2024
+										<p><b>Tasks accomplished:
+
+                                                                        </b><br>Completed a simulation focussing on how data science is a critical component
+   of British Airways success</br>
+									<br>Mined and meticulously analyzed customer review data, revealing insightful findings that inform strategic decisions.</br>
+                                                                        <br>Built a predictive model to understand factors that influence buying behaviour	</br>
+									
+									</p>
+
+
+ 
+						</p>
 									<ul>
 										<li><b>Strategic Leadership and Management Specialization:<br>University of Illinois at Urbana-Champaign(November 6, 2023)</br></b></li>
 									</ul>
