--- a/generic.html
+++ b/generic.html
@@ -109,13 +109,13 @@
 										<li><b>British Airways Data Science Job Simulation on Forage  (January 2024)</br></b></li>
 									</ul>
 									<p>
-									British Airways Data Science Job Simulation on Forage - January 2024
+									
 										<p><b>Tasks accomplished:
 
-                                                                        </b><br>Completed a simulation focussing on how data science is a critical component
-   of British Airways success</br>
-									<br>Mined and meticulously analyzed customer review data, revealing insightful findings that inform strategic decisions.</br>
-                                                                        <br>Built a predictive model to understand factors that influence buying behaviour	</br>
+                                                                        </b><br>Completed a simulation focussing on how <b>data science is a critical component
+   of British Airways success</b></br>
+									<be><b>Mined</b>and meticulously <b>analyzed customer review data</b>, revealing insightful findings that inform strategic decisions.</br>
+                                                                        <be><b>Built a predictive model</b> to understand factors that influence buying behaviour.	</br>
 									
 									</p>
 
