--- a/generic.html
+++ b/generic.html
@@ -114,8 +114,8 @@
 
                                                                         </b><br>Completed a simulation focussing on how <b>data science is a critical component
    of British Airways success</b></br>
-									<be><b>Mined</b>and meticulously <b>analyzed customer review data</b>, revealing insightful findings that inform strategic decisions.</br>
-                                                                        <be><b>Built a predictive model</b> to understand factors that influence buying behaviour.	</br>
+									<br><b>Mined</b>and meticulously <b>analyzed customer review data</b>, revealing insightful findings that inform strategic decisions.</br>
+                                                                        <br><b>Built a predictive model</b> to understand factors that influence buying behaviour.	</br>
 									
 									</p>
 
