--- a/generic.html
+++ b/generic.html
@@ -87,7 +87,7 @@
 												<li>Successfully enhanced the representation of women in institute teams, contributing to a more inclusive sports environment. Additionally, played a key role in amplifying participation among postgraduate students, fostering greater involvement in sports activities and competitions.</li>
 												<!-- Add more skills as needed -->
 											</ul>
-										<li><b>Organizing team member, Hallabol23’, the annual intra-college sports fest.     </b></li>
+										<li><b>Coordinator, Hallabol24’, the annual intra-college sports fest.     </b></li>
 											<ul>
 												<li>Skillfully orchestrated and executed a series of 10 competitive sports events spanning 10 days, attracting an impressive turnout of over 750 enthusiastic participants.</li>
 												<li>Efficiently ensured the flawless execution of matches by meticulously creating schedules for all participants, contributing to the overall smooth organization of events.</li>
@@ -123,9 +123,9 @@
 										<li><b>2.Strategic Leadership and Management Specialization:<br>University of Illinois at Urbana-Champaign(November 6, 2023)</br></b></li>
 									</ul></br>
 								
-								<p><b>Certifications Obtained:</b>
+								<b>Certifications Obtained:</b>
 
-									<br>Managing the Organization</br>
+									<p><br>Managing the Organization</br>
 									<br>Leading Teams: Building Effective Team Cultures</br>
 									<br>Designing the Organization</br>
 									<br>Strategic Leadership and Management Capstone</br>
