--- a/generic.html
+++ b/generic.html
@@ -120,18 +120,20 @@
  
 						<br>
 									<ul>
-										<li><b>2.Strategic Leadership and Management Specialization:<br>University of Illinois at Urbana-Champaign(November 6, 2023)</br></b></li>
-									</ul></br>
-								
-								<b>Certifications Obtained:</b>
+										<li><b>2. Strategic Leadership and Management Specialization:</b><br>University of Illinois at Urbana-Champaign (November 6, 2023)</br></li>
+</ul></br>
 
-									<p><br>Managing the Organization</br>
-									<br>Leading Teams: Building Effective Team Cultures</br>
-									<br>Designing the Organization</br>
-									<br>Strategic Leadership and Management Capstone</br>
-									<br>Leading Teams: Developing as a Leader</br>
-									<br>Corporate Strategy</br>
-									<br>Business Strategy</br></p>
+<b>Certifications Obtained:</b>
+<p><br>Managing the Organization</br>
+<br>Leading Teams: Building Effective Team Cultures</br>
+<br>Designing the Organization</br>
+<br>Strategic Leadership and Management Capstone</br>
+<br>Leading Teams: Developing as a Leader</br>
+<br>Corporate Strategy</br>
+<br>Business Strategy</br></p>
+
+
+									
 									<ul>
 										<li><b>3.Introduction to Data Science :Cisco Networking Academy</br></b></li>
 										<a href="https://www.credly.com/badges/83bc9fd7-e06d-4188-ac16-a45e41d655ee/public_url" target="_blank">Badge</a>
